--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
 
   "dependencies": {
     "@angular/animations": "7.0.4",
-    "@angular/cdk": "7.0.4",
+    "@angular/cdk": "7.1.0",
     "@angular/common": "7.0.4",
     "@angular/compiler": "7.0.4",
     "@angular/core": "7.0.4",
     "@angular/forms": "7.0.4",
-    "@angular/material": "7.0.4",
+    "@angular/material": "7.1.0",
     "@angular/platform-browser": "7.0.4",
     "@angular/platform-browser-dynamic": "7.0.4",
     "@angular/router": "7.0.4",
     "hammerjs": "2.0.8",
+    "hash.js": "1.1.5",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
