--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-browser": "7.1.0",
     "@angular/platform-browser-dynamic": "7.1.0",
     "@angular/router": "7.1.0",
+    "brace": "0.11.1",
     "hammerjs": "2.0.8",
     "hash.js": "1.1.5",
+    "ng2-ace-editor": "0.3.8",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
