--- a/package.json
+++ b/package.json
@@ -16,29 +16,32 @@
   },
 
   "dependencies": {
-    "@angular/animations": "7.1.0",
+    "@angular/animations": "7.1.1",
     "@angular/cdk": "7.1.0",
-    "@angular/common": "7.1.0",
-    "@angular/compiler": "7.1.0",
-    "@angular/core": "7.1.0",
-    "@angular/forms": "7.1.0",
+    "@angular/common": "7.1.1",
+    "@angular/compiler": "7.1.1",
+    "@angular/core": "7.1.1",
+    "@angular/forms": "7.1.1",
     "@angular/material": "7.1.0",
-    "@angular/platform-browser": "7.1.0",
-    "@angular/platform-browser-dynamic": "7.1.0",
-    "@angular/router": "7.1.0",
+    "@angular/platform-browser": "7.1.1",
+    "@angular/platform-browser-dynamic": "7.1.1",
+    "@angular/router": "7.1.1",
+    "@datagazer/layout": "1.0.0-dev.3",
+    "@datagazer/typography": "1.0.0-dev.3",
+    "@datagazer/ui": "1.0.0-dev.3",
     "brace": "0.11.1",
     "hammerjs": "2.0.8",
-    "hash.js": "1.1.5",
+    "hash.js": "1.1.7",
     "ng2-ace-editor": "0.3.8",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
 
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.6",
-    "@angular/cli": "7.0.6",
-    "@angular/compiler-cli": "7.1.0",
-    "@angular/language-service": "7.1.0",
+    "@angular-devkit/build-angular": "0.11.0",
+    "@angular/cli": "7.1.0",
+    "@angular/compiler-cli": "7.1.1",
+    "@angular/language-service": "7.1.1",
     "codelyzer": "4.5.0",
     "tslint": "5.11.0",
     "typescript": "3.1.6"
