--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
             ],
 
             "styles": [
-              "./src/styles/reset.scss",
-              "./src/styles/material.scss"
+              "./src/styles/global.scss"
             ],
 
             "stylePreprocessorOptions": {
@@ -42,10 +41,6 @@
 
           "configurations": {
             "dev": {
-              "fileReplacements": [
-                { "replace": "./src/environments/environment.ts", "with": "./src/environments/environment.dev.ts" }
-              ],
-
               "aot": true,
               "buildOptimizer": false,
               "commonChunk": true,
@@ -55,14 +50,17 @@
               "extractCss": true,
               "extractLicenses": false,
               "optimization": false,
-              "sourceMap": true
+              "sourceMap": true,
+
+              "fileReplacements": [
+                {
+                  "replace": "./src/environments/environment.ts",
+                  "with": "./src/environments/environment.dev.ts"
+                }
+              ]
             },
 
             "prod": {
-              "fileReplacements": [
-                { "replace": "./src/environments/environment.ts", "with": "./src/environments/environment.prod.ts" }
-              ],
-
               "aot": true,
               "buildOptimizer": true,
               "commonChunk": false,
@@ -72,7 +70,14 @@
               "extractCss": true,
               "extractLicenses": false,
               "optimization": true,
-              "sourceMap": false
+              "sourceMap": false,
+
+              "fileReplacements": [
+                {
+                  "replace": "./src/environments/environment.ts",
+                  "with": "./src/environments/environment.prod.ts"
+                }
+              ]
             }
           }
         },
