--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@angular/platform-browser": "7.1.1",
     "@angular/platform-browser-dynamic": "7.1.1",
     "@angular/router": "7.1.1",
-    "@datagazer/layout": "1.0.0-dev.3",
-    "@datagazer/typography": "1.0.0-dev.3",
-    "@datagazer/ui": "1.0.0-dev.3",
+    "@datagazer/layout": "1.0.0-dev.4",
+    "@datagazer/structure": "1.0.0-dev.4",
+    "@datagazer/ui": "1.0.0-dev.4",
     "brace": "0.11.1",
     "hammerjs": "2.0.8",
     "hash.js": "1.1.7",
